bug fix (missing ,)

--- a/ucEmu/cpuEmulator.html
+++ b/ucEmu/cpuEmulator.html
@@ -119,7 +119,7 @@
             NAND: {
                 opcode: 1,
                 name: 'nand',
-                nameFull: 'Bitwise NAND'
+                nameFull: 'Bitwise NAND',
                 cycles: 0,
                 byteWidth: 2
             },
@@ -133,7 +133,7 @@
             JNZ: {
                 opcode: 3,
                 name: 'jnz',
-                nameFull: "Jump if not zero"
+                nameFull: "Jump if not zero",
                 cycles: 0,
                 byteWidth: 2
             },
@@ -147,7 +147,7 @@
             IMM: {
                 opcode: 5,
                 name: 'imm',
-                nameFull: "Immediate value"
+                nameFull: "Immediate value",
                 cycles: 0,
                 byteWidth: 4
             },
