--- a/ucEmu/cpuEmulator.html
+++ b/ucEmu/cpuEmulator.html
@@ -165,17 +165,6 @@
                 cycles: 0,
                 byteWidth: 2
             }
-
-            /*
-                ? cycles   | 0x0R 0xRR            | 00 | add     regOut, regIn0, regIn1        | regOut = regIn0 + regIn1
-                ? cycles   | 0x1R 0xRR            | 01 | nand    regOut, regIn0, regIn1        | regOut = regIn0 nand regIn1
-                ? cycles   | 0x2R 0xRR            | 02 | sh      regOut, regIn0, regIn1        | regOut = (regIn1>=0) ? (regIn0 << regIn1) : (regIn0 >>> abs(regIn1))
-                ? cycles   | 0x3_ 0xRR            | 03 | jnz     regIn0, regIn1                | if (regIn1!=0) jump to address from regIn0
-                ? cycles   | 0x4R 0xR_            | 04 | copy    regOut, regIn0                | regOut = regIn0
-                ? cycles   | 0x5R 0x__ 0xCC 0xCC  | 05 | imm     regOut, _constans16bit_       | regOut = _constans16bit_
-                ? cycles   | 0x6_ 0xR_            | 06 | ld      regIn0                        | regMem = MemoryAt[regIn0]
-                ? cycles   | 0x7_ 0xR_            | 07 | st      regIn0                        | MemoryAt[regIn0] = regMem
-            */
         };
 
         this.inputs = {
@@ -295,6 +284,12 @@
                 case _this.SEQUENCER_STATES.EXECUTE_JNZ: 
                     sequencerExecuteJnz();
                     break;
+                case _this.SEQUENCER_STATES.EXECUTE_COPY: 
+                    sequencerExecuteCopy();
+                    break;
+                case _this.SEQUENCER_STATES.EXECUTE_IMM: 
+                    sequencerExecuteImm();
+                    break;
             }
 
             // TODO increase timer
@@ -315,8 +310,6 @@
             _this.registers.regMemory = 0x00000000;
             _this.registers.regTimer = 0x00000000;
 
-            console.log('RESET!!');
-
             // !!! regReset register is excluded from reset !!!
         }
 
@@ -325,11 +318,6 @@
             // memoryAddress
             switch (_this.registers.regSequencer) {
                 case _this.SEQUENCER_STATES.FETCH_FIRST:
-                case _this.SEQUENCER_STATES.EXECUTE_ADD:
-                case _this.SEQUENCER_STATES.EXECUTE_NAND:
-                case _this.SEQUENCER_STATES.EXECUTE_SH:
-                case _this.SEQUENCER_STATES.EXECUTE_JNZ:
-                // TOOD more
                     _this.outputs.memoryAddress = _this.registers.regPC;
                     break;
                 case _this.SEQUENCER_STATES.FETCH_SECOND_AND_DECODE:
@@ -503,31 +491,36 @@
 
             _this.registers.regSequencer = _this.SEQUENCER_STATES.FETCH_FIRST;
             saveRegister(_this.SPECIAL_REGISTERS.REG_PC.number, regPCNext);
-
-            // ? cycles   | 0x3_ 0xRR            | 03 | jnz     regIn0, regIn1                | if (regIn1!=0) jump to address from regIn0
         }
 
-        function sequenceCopy()
+        function sequencerExecuteCopy()
         {
-            console.log('    :: sequenceCopy');
-
-            // TODO
-            /*
+            console.log('    :: sequencerExecuteCopy');
             var regOut = (_this.registers.regInstruction & 0x0F000000) >>> (6 * 4),
                 regIn0 = (_this.registers.regInstruction & 0x00F00000) >>> (5 * 4),
                 regIn0Value = readRegister(regIn0)
             ;
 
             console.log('    regOut, regIn0 <-> ' + regOut + ', ' + regIn0);
-            console.log('    regIn0Value = ' + dumpHex(regIn0Value) + " (COPY, save regIn0 at regOut)");
+            console.log('    regIn0Value = ' + dumpHex(regIn0Value) + " (COPY, save regIn0Value at regOut)");
 
             _this.registers.regSequencer = _this.SEQUENCER_STATES.FETCH_FIRST;
             saveRegister(regOut, regIn0Value);
-            */
-            // ? cycles   | 0x4R 0xR_            | 04 | copy    regOut, regIn0                | regOut = regIn0
-            // ? cycles   | 0x5R 0x__ 0xCC 0xCC  | 05 | imm     regOut, _constans16bit_       | regOut = _constans16bit_
         }
 
+        function sequencerExecuteImm()
+        {
+            console.log('    :: sequencerExecuteImm');
+            var regOut = (_this.registers.regInstruction & 0x0F000000) >>> (6 * 4),
+                imm = _this.registers.regInstruction & 0x0000FFFF
+            ;
+
+            console.log('    regOut = ' + regOut);
+            console.log('    imm = ' + dumpHex(imm) + " (store immmediate value at regOut)");
+
+            _this.registers.regSequencer = _this.SEQUENCER_STATES.FETCH_FIRST;
+            saveRegister(regOut, imm);
+        }
         
 
         function getInstructionDetails(opcode) 
