--- a/SimpleC.html
+++ b/SimpleC.html
@@ -24,7 +24,7 @@ Variable initialization
 
         There is only one type of variable - word. Because CPU registers have 16 bits, all memory 
         read/write operations works also on 16 bits (signed integer in U2 code). You can create 
-        variable by using 'var' keyword. Variables can be initialized with predefined values only 
+        variable by using 'var' keyword. Variables can be initialized with predefined values but only
         in global scope. You can't initialize variable with predefined values at functions. Use 
         separate 'var' for each variable name.
 
