restructure in progress

--- a/ucEmu/hardware/hardware.html
+++ b/ucEmu/hardware/hardware.html
@@ -1,3 +1,4 @@
+<script src="RegisterSet.js.js"></script>
 <script src="Cpu.js"></script>
 <script src="StaticRam.js"></script>
 <script src="boot.js"></script>
