--- a/ucEmu/hardware/hardware.html
+++ b/ucEmu/hardware/hardware.html
@@ -1,4 +1,5 @@
-<script src="RegisterSet.js.js"></script>
+<script src="InstructionDecoder.js"></script>
+<script src="RegisterSet.js"></script>
 <script src="Cpu.js"></script>
 <script src="StaticRam.js"></script>
 <script src="boot.js"></script>
