new sequencer class but not yet working

--- a/ucEmu/hardware/hardware.html
+++ b/ucEmu/hardware/hardware.html
@@ -1,3 +1,4 @@
+<script src="Sequencer.js"></script>
 <script src="InstructionDecoder.js"></script>
 <script src="RegisterSet.js"></script>
 <script src="Cpu.js"></script>
