cannot use vars at other vars def

--- a/SimpleC.html
+++ b/SimpleC.html
@@ -814,7 +814,7 @@ SIMPLEC CODE EXAMPLE
 
     var ASCII_NULL = 0x00;
 
-    var test = { <byte[1]>, "test", ASCII_NULL };
+    var test = { <byte[1]>, "test", ASCII_NULL };  // TODO fix this
     var testLength;
 
     function strlen(s)
