text chance at simpleC doc

--- a/SimpleC.html
+++ b/SimpleC.html
@@ -153,7 +153,7 @@ Suported operators
 
     1. Brief
 
-        SimpleC language is as simple as possible so there is very few operators available
+        SimpleC language was designed to be as simple as possible so we have only few operators available
 
             =   Assing right side of the expression to the left side
             []  Helps with access to values in array
