--- a/ucEmu/hardware/hardware.html
+++ b/ucEmu/hardware/hardware.html
@@ -1,6 +1,8 @@
-<script src="Sequencer.js"></script>
-<script src="InstructionDecoder.js"></script>
-<script src="RegisterSet.js"></script>
-<script src="Cpu.js"></script>
-<script src="StaticRam.js"></script>
+<script src="sequencer-handlers/sequencer-fetch-first.factory.factory.js"></script>
+<script src="sequencer-handlers/sequencer-fetch-second-and-decode.factory.js"></script>
+<script src="sequencer.factory.js"></script>
+<script src="instruction-decoder.factory.js"></script>
+<script src="register-set.factory.js"></script>
+<script src="cpu.factory.js"></script>
+<script src="static-ram.factory.js"></script>
 <script src="boot.js"></script>
