Couple of sequencer handlers refactored

--- a/ucEmu/hardware/hardware.html
+++ b/ucEmu/hardware/hardware.html
@@ -1,3 +1,7 @@
+<script src="sequencer-handlers/sequencer-execute-imm.factory.js"></script>
+<script src="sequencer-handlers/sequencer-execute-nand.factory.js"></script>
+<script src="sequencer-handlers/sequencer-execute-add.factory.js"></script>
+<script src="sequencer-handlers/sequencer-execute-jnz.factory.js"></script>
 <script src="sequencer-handlers/sequencer-fetch-first.factory.factory.js"></script>
 <script src="sequencer-handlers/sequencer-fetch-second-and-decode.factory.js"></script>
 <script src="sequencer.factory.js"></script>
