Sequencer handlers update

--- a/ucEmu/hardware/hardware.html
+++ b/ucEmu/hardware/hardware.html
@@ -1,7 +1,13 @@
+<script src="sequencer-handlers/sequencer-execute-st-first.factory.js"></script>
+<script src="sequencer-handlers/sequencer-execute-st-second.factory.js"></script>
+<script src="sequencer-handlers/sequencer-execute-st-third.factory.js"></script>
+<script src="sequencer-handlers/sequencer-execute-st-fourth.factory.js"></script>
 <script src="sequencer-handlers/sequencer-execute-imm.factory.js"></script>
 <script src="sequencer-handlers/sequencer-execute-nand.factory.js"></script>
 <script src="sequencer-handlers/sequencer-execute-add.factory.js"></script>
+<script src="sequencer-handlers/sequencer-execute-copy.factory.js"></script>
 <script src="sequencer-handlers/sequencer-execute-jnz.factory.js"></script>
+<script src="sequencer-handlers/sequencer-execute-sh.factory.js"></script>
 <script src="sequencer-handlers/sequencer-fetch-first.factory.factory.js"></script>
 <script src="sequencer-handlers/sequencer-fetch-second-and-decode.factory.js"></script>
 <script src="sequencer.factory.js"></script>
