structural changes at basic operators

--- a/ucEmu.html
+++ b/ucEmu.html
@@ -5,32 +5,24 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>ucEmu</title>
 
-
-        <script src="basicType/__cpuAsm.js"></script>
-        <script src="basicType/__define.js"></script>
-        <script src="basicType/_add.js"></script>
-        <script src="basicType/_dec.js"></script>
-        <script src="basicType/_divMod.js"></script>
-        <script src="basicType/_inc.js"></script>
-        <script src="basicType/_mul.js"></script>
-        <script src="basicType/_neg.js"></script>
-        <script src="basicType/_sub.js"></script>
-        <script src="basicType/binAnd.js"></script>
-        <script src="basicType/binNot.js"></script>
-        <script src="basicType/binOr.js"></script>
-        <script src="basicType/binSh.js"></script>
-        <script src="basicType/binXnor.js"></script>
-        <script src="basicType/binXor.js"></script>
-        <script src="basicType/cmpE.js"></script>
-        <script src="basicType/cmpGT.js"></script>
-        <script src="basicType/cmpGTE.js"></script>
-        <script src="basicType/cmpLTE.js"></script>
-        <script src="basicType/cmpNE.js"></script>
-        <script src="basicType/logicAnd.js"></script>
-        <script src="basicType/logicNot.js"></script>
-        <script src="basicType/logicOr.js"></script>
-        <script src="basicType/logicXnor.js"></script>
-        <script src="basicType/logicXor.js"></script>
+        <script src="operators/word/__define.js"></script>
+        <script src="operators/word/basic.js"></script>
+        <script src="operators/word/binAnd.js"></script>
+        <script src="operators/word/binNot.js"></script>
+        <script src="operators/word/binOr.js"></script>
+        <script src="operators/word/binSh.js"></script>
+        <script src="operators/word/binXnor.js"></script>
+        <script src="operators/word/binXor.js"></script>
+        <script src="operators/word/cmpE.js"></script>
+        <script src="operators/word/cmpGT.js"></script>
+        <script src="operators/word/cmpGTE.js"></script>
+        <script src="operators/word/cmpLTE.js"></script>
+        <script src="operators/word/cmpNE.js"></script>
+        <script src="operators/word/logicAnd.js"></script>
+        <script src="operators/word/logicNot.js"></script>
+        <script src="operators/word/logicOr.js"></script>
+        <script src="operators/word/logicXnor.js"></script>
+        <script src="operators/word/logicXor.js"></script>
         
         <script src="drivers/KeyboardDriver.js"></script>
         <script src="drivers/ScreenDriver.js"></script>
@@ -45,6 +37,7 @@
         <script src="services/RasterizerService.js"></script>
 
         <!-- ucEmu library files -->
+        <script src="ucEmu/asm-instruction.js"></script>
         <script src="ucEmu/devices/KeyboardDevice.js"></script>
         <script src="ucEmu/devices/ScreenDevice.js"></script>
         <script src="ucEmu/devices/TimerDevice.js"></script>
