registers index and imm are now fetched from instruction decoder
Add/nand/sh moved to ALU

--- a/ucEmu/hardware/hardware.html
+++ b/ucEmu/hardware/hardware.html
@@ -1,3 +1,4 @@
+<script src="alu.factory.js"></script>
 <script src="sequencer-handlers/sequencer-execute-st-first.factory.js"></script>
 <script src="sequencer-handlers/sequencer-execute-st-second.factory.js"></script>
 <script src="sequencer-handlers/sequencer-execute-st-third.factory.js"></script>
