--- a/ucEmu/hardware/hardware.html
+++ b/ucEmu/hardware/hardware.html
@@ -1,4 +1,6 @@
 <script src="alu.factory.js"></script>
+<script src="sequencer-handlers/sequencer-execute-ld-first.factory.js"></script>
+<script src="sequencer-handlers/sequencer-execute-ld-second.factory.js"></script>
 <script src="sequencer-handlers/sequencer-execute-st-first.factory.js"></script>
 <script src="sequencer-handlers/sequencer-execute-st-second.factory.js"></script>
 <script src="sequencer-handlers/sequencer-execute-st-third.factory.js"></script>
