--- a/ucEmu/hardware/hardware.html
+++ b/ucEmu/hardware/hardware.html
@@ -1,3 +1,4 @@
+<script src="bit-utils.service.js"></script>
 <script src="alu.factory.js"></script>
 <script src="sequencer-handlers/sequencer-execute-ld-first.factory.js"></script>
 <script src="sequencer-handlers/sequencer-execute-ld-second.factory.js"></script>
