--- a/ucEmu/hardware/hardware.html
+++ b/ucEmu/hardware/hardware.html
@@ -1,5 +1,7 @@
 <script src="signal/signal-factory.service.js"></script>
 <script src="signal/signal.factory.js"></script>
+<script src="cpu-aware.factory.js"></script>
+<script src="sequencer-handlers/abstract-sequencer-handler.factory.js"></script>
 <script src="bit-utils.service.js"></script>
 <script src="alu.factory.js"></script>
 <script src="sequencer-handlers/sequencer-execute-ld-first.factory.js"></script>
