--- a/ucEmu.html
+++ b/ucEmu.html
@@ -223,7 +223,7 @@
                 if (demo === -1) {
                     demo = randomInt(0, 3);
                 }
-                demo = 3;
+                // demo = 3;
                 switch (demo) {
                     case 0:
                         demo0();
