--- a/ucEmu/hardware/hardware.html
+++ b/ucEmu/hardware/hardware.html
@@ -18,6 +18,7 @@
 <script src="sequencer-handlers/sequencer-execute-sh.factory.js"></script>
 <script src="sequencer-handlers/sequencer-fetch-first.factory.factory.js"></script>
 <script src="sequencer-handlers/sequencer-fetch-second-and-decode.factory.js"></script>
+<script src="sequencer-handler-builder.service.js"></script>
 <script src="sequencer.factory.js"></script>
 <script src="instruction-decoder.factory.js"></script>
 <script src="register-set.factory.js"></script>
