--- a/ucEmu/hardware/hardware.html
+++ b/ucEmu/hardware/hardware.html
@@ -1,3 +1,8 @@
+<script src="alu-builder.service.js"></script>
+<script src="instruction-decoder-builder.service.js"></script>
+<script src="register-set-builder.service.js"></script>
+<script src="sequencer-builder.service.js"></script>
+<script src="sequencer-handler-builder.service.js"></script>
 <script src="signal/signal-factory.service.js"></script>
 <script src="signal/signal.factory.js"></script>
 <script src="cpu-aware.factory.js"></script>
@@ -6,10 +11,12 @@
 <script src="alu.factory.js"></script>
 <script src="sequencer-handlers/sequencer-execute-ld-first.factory.js"></script>
 <script src="sequencer-handlers/sequencer-execute-ld-second.factory.js"></script>
-<script src="sequencer-handlers/sequencer-execute-st-first.factory.js"></script>
-<script src="sequencer-handlers/sequencer-execute-st-second.factory.js"></script>
-<script src="sequencer-handlers/sequencer-execute-st-third.factory.js"></script>
-<script src="sequencer-handlers/sequencer-execute-st-fourth.factory.js"></script>
+<script src="sequencer-handlers/sequencer-execute-st-first-a.factory.js"></script>
+<script src="sequencer-handlers/sequencer-execute-st-first-b.factory.js"></script>
+<script src="sequencer-handlers/sequencer-execute-st-first-c.factory.js"></script>
+<script src="sequencer-handlers/sequencer-execute-st-second-a.factory.js"></script>
+<script src="sequencer-handlers/sequencer-execute-st-second-b.factory.js"></script>
+<script src="sequencer-handlers/sequencer-execute-st-second-c.factory.js"></script>
 <script src="sequencer-handlers/sequencer-execute-imm.factory.js"></script>
 <script src="sequencer-handlers/sequencer-execute-nand.factory.js"></script>
 <script src="sequencer-handlers/sequencer-execute-add.factory.js"></script>
@@ -18,7 +25,6 @@
 <script src="sequencer-handlers/sequencer-execute-sh.factory.js"></script>
 <script src="sequencer-handlers/sequencer-fetch-first.factory.factory.js"></script>
 <script src="sequencer-handlers/sequencer-fetch-second-and-decode.factory.js"></script>
-<script src="sequencer-handler-builder.service.js"></script>
 <script src="sequencer.factory.js"></script>
 <script src="instruction-decoder.factory.js"></script>
 <script src="register-set.factory.js"></script>
