--- a/ucEmu/hardware/hardware.html
+++ b/ucEmu/hardware/hardware.html
@@ -1,3 +1,4 @@
+<script src="logger.service.js"></script>
 <script src="alu-builder.service.js"></script>
 <script src="instruction-decoder-builder.service.js"></script>
 <script src="register-set-builder.service.js"></script>
