logger almost done

--- a/ucEmu/hardware/hardware.html
+++ b/ucEmu/hardware/hardware.html
@@ -1,34 +1,42 @@
-<script src="logger.service.js"></script>
-<script src="alu-builder.service.js"></script>
-<script src="instruction-decoder-builder.service.js"></script>
-<script src="register-set-builder.service.js"></script>
-<script src="sequencer-builder.service.js"></script>
-<script src="sequencer-handler-builder.service.js"></script>
-<script src="signal/signal-factory.service.js"></script>
-<script src="signal/signal.factory.js"></script>
-<script src="cpu-aware.factory.js"></script>
-<script src="sequencer-handlers/abstract-sequencer-handler.factory.js"></script>
-<script src="bit-utils.service.js"></script>
-<script src="alu.factory.js"></script>
-<script src="sequencer-handlers/sequencer-execute-ld-first.factory.js"></script>
-<script src="sequencer-handlers/sequencer-execute-ld-second.factory.js"></script>
-<script src="sequencer-handlers/sequencer-execute-st-first-a.factory.js"></script>
-<script src="sequencer-handlers/sequencer-execute-st-first-b.factory.js"></script>
-<script src="sequencer-handlers/sequencer-execute-st-first-c.factory.js"></script>
-<script src="sequencer-handlers/sequencer-execute-st-second-a.factory.js"></script>
-<script src="sequencer-handlers/sequencer-execute-st-second-b.factory.js"></script>
-<script src="sequencer-handlers/sequencer-execute-st-second-c.factory.js"></script>
-<script src="sequencer-handlers/sequencer-execute-imm.factory.js"></script>
-<script src="sequencer-handlers/sequencer-execute-nand.factory.js"></script>
-<script src="sequencer-handlers/sequencer-execute-add.factory.js"></script>
-<script src="sequencer-handlers/sequencer-execute-copy.factory.js"></script>
-<script src="sequencer-handlers/sequencer-execute-jnz.factory.js"></script>
-<script src="sequencer-handlers/sequencer-execute-sh.factory.js"></script>
-<script src="sequencer-handlers/sequencer-fetch-first.factory.factory.js"></script>
-<script src="sequencer-handlers/sequencer-fetch-second-and-decode.factory.js"></script>
-<script src="sequencer.factory.js"></script>
-<script src="instruction-decoder.factory.js"></script>
-<script src="register-set.factory.js"></script>
-<script src="cpu.factory.js"></script>
-<script src="static-ram.factory.js"></script>
-<script src="boot.js"></script>
+<html>
+    <head>
+        <script src="logger.service.js"></script>
+        <script src="alu-builder.service.js"></script>
+        <script src="instruction-decoder-builder.service.js"></script>
+        <script src="register-set-builder.service.js"></script>
+        <script src="sequencer-builder.service.js"></script>
+        <script src="sequencer-handler-builder.service.js"></script>
+        <script src="signal/signal-factory.service.js"></script>
+        <script src="signal/signal.factory.js"></script>
+        <script src="cpu-aware.factory.js"></script>
+        <script src="sequencer-handlers/abstract-sequencer-handler.factory.js"></script>
+        <script src="bit-utils.service.js"></script>
+        <script src="alu.factory.js"></script>
+        <script src="sequencer-handlers/sequencer-execute-ld-first.factory.js"></script>
+        <script src="sequencer-handlers/sequencer-execute-ld-second.factory.js"></script>
+        <script src="sequencer-handlers/sequencer-execute-st-first-a.factory.js"></script>
+        <script src="sequencer-handlers/sequencer-execute-st-first-b.factory.js"></script>
+        <script src="sequencer-handlers/sequencer-execute-st-first-c.factory.js"></script>
+        <script src="sequencer-handlers/sequencer-execute-st-second-a.factory.js"></script>
+        <script src="sequencer-handlers/sequencer-execute-st-second-b.factory.js"></script>
+        <script src="sequencer-handlers/sequencer-execute-st-second-c.factory.js"></script>
+        <script src="sequencer-handlers/sequencer-execute-imm.factory.js"></script>
+        <script src="sequencer-handlers/sequencer-execute-nand.factory.js"></script>
+        <script src="sequencer-handlers/sequencer-execute-add.factory.js"></script>
+        <script src="sequencer-handlers/sequencer-execute-copy.factory.js"></script>
+        <script src="sequencer-handlers/sequencer-execute-jnz.factory.js"></script>
+        <script src="sequencer-handlers/sequencer-execute-sh.factory.js"></script>
+        <script src="sequencer-handlers/sequencer-fetch-first.factory.factory.js"></script>
+        <script src="sequencer-handlers/sequencer-fetch-second-and-decode.factory.js"></script>
+        <script src="sequencer.factory.js"></script>
+        <script src="instruction-decoder.factory.js"></script>
+        <script src="register-set.factory.js"></script>
+        <script src="cpu.factory.js"></script>
+        <script src="static-ram.factory.js"></script>
+        <script src="boot.js"></script>
+    </head>
+
+    <body style="font-family: monospace; font-size: 10px; line-height: 1.1em;">
+
+    </body>
+</html>
