--- a/ucEmu/hardware/hardware.html
+++ b/ucEmu/hardware/hardware.html
@@ -4,31 +4,31 @@
         <script src="alu-builder.service.js"></script>
         <script src="instruction-decoder-builder.service.js"></script>
         <script src="register-set-builder.service.js"></script>
-        <script src="sequencer-builder.service.js"></script>
-        <script src="sequencer-handler-builder.service.js"></script>
+        <script src="control-unit-builder.service.js"></script>
+        <script src="sequencer-handlers/microcode-builder.service.js"></script>
         <script src="signal/signal-factory.service.js"></script>
         <script src="signal/signal.factory.js"></script>
         <script src="cpu-aware.factory.js"></script>
         <script src="sequencer-handlers/abstract-sequencer-handler.factory.js"></script>
         <script src="bit-utils.service.js"></script>
         <script src="alu.factory.js"></script>
-        <script src="sequencer-handlers/sequencer-execute-ld-first.factory.js"></script>
-        <script src="sequencer-handlers/sequencer-execute-ld-second.factory.js"></script>
-        <script src="sequencer-handlers/sequencer-execute-st-first-a.factory.js"></script>
-        <script src="sequencer-handlers/sequencer-execute-st-first-b.factory.js"></script>
-        <script src="sequencer-handlers/sequencer-execute-st-first-c.factory.js"></script>
-        <script src="sequencer-handlers/sequencer-execute-st-second-a.factory.js"></script>
-        <script src="sequencer-handlers/sequencer-execute-st-second-b.factory.js"></script>
-        <script src="sequencer-handlers/sequencer-execute-st-second-c.factory.js"></script>
-        <script src="sequencer-handlers/sequencer-execute-imm.factory.js"></script>
-        <script src="sequencer-handlers/sequencer-execute-nand.factory.js"></script>
-        <script src="sequencer-handlers/sequencer-execute-add.factory.js"></script>
-        <script src="sequencer-handlers/sequencer-execute-copy.factory.js"></script>
-        <script src="sequencer-handlers/sequencer-execute-jnz.factory.js"></script>
-        <script src="sequencer-handlers/sequencer-execute-sh.factory.js"></script>
-        <script src="sequencer-handlers/sequencer-fetch-first.factory.factory.js"></script>
-        <script src="sequencer-handlers/sequencer-fetch-second-and-decode.factory.js"></script>
-        <script src="sequencer.factory.js"></script>
+        <script src="sequencer-handlers/microcode-execute-ld-first.factory.js"></script>
+        <script src="sequencer-handlers/microcode-execute-ld-second.factory.js"></script>
+        <script src="sequencer-handlers/microcode-execute-st-first-a.factory.js"></script>
+        <script src="sequencer-handlers/microcode-execute-st-first-b.factory.js"></script>
+        <script src="sequencer-handlers/microcode-execute-st-first-c.factory.js"></script>
+        <script src="sequencer-handlers/microcode-execute-st-second-a.factory.js"></script>
+        <script src="sequencer-handlers/microcode-execute-st-second-b.factory.js"></script>
+        <script src="sequencer-handlers/microcode-execute-st-second-c.factory.js"></script>
+        <script src="sequencer-handlers/microcode-execute-imm.factory.js"></script>
+        <script src="sequencer-handlers/microcode-execute-nand.factory.js"></script>
+        <script src="sequencer-handlers/microcode-execute-add.factory.js"></script>
+        <script src="sequencer-handlers/microcode-execute-copy.factory.js"></script>
+        <script src="sequencer-handlers/microcode-execute-jnz.factory.js"></script>
+        <script src="sequencer-handlers/microcode-execute-sh.factory.js"></script>
+        <script src="sequencer-handlers/microcode-fetch-first.factory.factory.js"></script>
+        <script src="sequencer-handlers/microcode-fetch-second-and-decode.factory.js"></script>
+        <script src="control-unit.factory.js"></script>
         <script src="instruction-decoder.factory.js"></script>
         <script src="register-set.factory.js"></script>
         <script src="cpu.factory.js"></script>
