Opcode and microcode states moved to separate file

--- a/ucEmu/hardware/hardware.html
+++ b/ucEmu/hardware/hardware.html
@@ -2,6 +2,8 @@
     <head>
         <script src="logger.service.js"></script>
         <script src="alu-builder.service.js"></script>
+        <script src="opcode.service.js"></script>
+        <script src="microcode.service.js"></script>
         <script src="instruction-decoder-builder.service.js"></script>
         <script src="register-set-builder.service.js"></script>
         <script src="control-unit-builder.service.js"></script>
