pix font update

--- a/pixfont.html
+++ b/pixfont.html
@@ -601,9 +601,9 @@
         </div>
 
         <div class="font-img">
-            <img src="3x4.png" />
-            <img src="3x5.png" />
-            <img src="5x8.png" />
+            <img src="3x4_ready.png" />
+            <img src="3x5_ready.png" />
+            <img src="5x8_ready.png" />
         </div>
 
     </body>
